table cells vertical alignment fix
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C1051138

--- a/ebookStylesheets/css/document.css
+++ b/ebookStylesheets/css/document.css
@@ -61,6 +61,14 @@ a + .no-indent:nth-child(2),
   text-align: right !important;
 }
 
+.vt {
+  vertical-align: top;
+}
+
+.vb {
+  vertical-align: bottom;
+}
+
 .left_indent {
   text-indent: 1em;
 }
